--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "firebase": "^11.0.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-calendar": "^5.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
+    "@types/node": "^22.10.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
