--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@next/env": "^15.0.3",
+    "@next/env": "^15.1.3",
     "clsx": "^2.1.1",
-    "firebase": "^11.0.2",
-    "next": "15.0.3",
+    "firebase": "^11.1.0",
+    "next": "^15.1.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-calendar": "^5.1.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.54.2",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.5",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.17"
   }
 }
