--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "clsx": "^2.1.1",
     "firebase": "^11.1.0",
     "next": "^15.1.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
     "react-calendar": "^5.1.0",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0"
   },
