--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "eslint-config-next": "^15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.17"
+  },
+  "overrides": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@floating-ui/react": "^0.26.28",
+    "@react-aria/*": "^3.18.4"
   }
 }
